@@ -290,6 +290,9 @@ class DebBuildConfig(object):
   export_upstream_revision = _opt_property('export-upstream-revision',
                          "The revision of the upstream source to use.")
 
+  commit_message_from_changelog = _bool_property('commit-message-from-changelog',
+                                    "Whether the commit message should come from debian/changelog", default=True)
+
 
 def _test():
   import doctest
